Use Heightgraph fork until merged, remove patch

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "lint": "eslint .",
         "prettier": "prettier --write '**/*'",
         "serve": "gulp serve watch",
-        "standalone": "mvn clean install -f ../brouter -pl '!brouter-routing-app' -Dmaven.javadoc.skip=true && ../brouter/misc/scripts/generate_profile_variants.sh && gulp release:zip_standalone",
-        "postinstall": "patch-package"
+        "standalone": "mvn clean install -f ../brouter -pl '!brouter-routing-app' -Dmaven.javadoc.skip=true && ../brouter/misc/scripts/generate_profile_variants.sh && gulp release:zip_standalone"
     },
     "husky": {
         "hooks": {
@@ -68,7 +67,7 @@
         "leaflet-routing": "nrenner/leaflet-routing#e94e153",
         "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
         "leaflet-triangle-marker": "^1.0.2",
-        "leaflet.heightgraph": "1.3.3",
+        "leaflet.heightgraph": "nrenner/Leaflet.Heightgraph#40cdbc9",
         "leaflet.locatecontrol": "^0.60.0",
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
@@ -109,8 +108,6 @@
         "merge-stream": "^2.0.0",
         "node-fetch": "^2.6.1",
         "npmfiles": "^0.1.3",
-        "patch-package": "~6.2.2",
-        "postinstall-postinstall": "~2.1.0",
         "prettier": "^2.2.1",
         "pretty-quick": "^3.1.0"
     },
