--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@bagage/leaflet.restoreview": "1.0.1",
         "@mapbox/polyline": "^0.2.0",
         "@mapbox/togeojson": "^0.16.0",
-        "@turf/turf": "^5.1.6",
+        "@turf/turf": "^6.2.0",
         "Leaflet.vector-markers": "nrenner/Leaflet.vector-markers#2ef80c9",
         "async": "~0.9.2",
         "bootbox": "~5.3.4",
@@ -72,6 +72,7 @@
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
+        "osmtogeojson": "^3.0.0-beta.4",
         "promise-polyfill": "^8.2.0",
         "url-search-params": "~0.5.0",
         "whatwg-fetch": "^3.5.0"
@@ -253,6 +254,16 @@
             "main": [
                 "dist/leaflet-vector-markers.js",
                 "dist/leaflet-vector-markers.css"
+            ]
+        },
+        "osmtogeojson": {
+            "main": [
+                "osmtogeojson.js"
+            ]
+        },
+        "@turf/turf": {
+            "main": [
+                "turf.min.js"
             ]
         }
     }
