--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
         "osmtogeojson": "^3.0.0-beta.4",
         "promise-polyfill": "^8.2.0",
+        "topojson-client": "^3.1.0",
         "url-search-params": "~0.5.0",
         "whatwg-fetch": "^3.5.0"
     },
