--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
+        "osmtogeojson": "^3.0.0-beta.4",
         "promise-polyfill": "^8.2.0",
         "url-search-params": "~0.5.0",
         "whatwg-fetch": "^3.5.0"
@@ -254,6 +255,11 @@
             "main": [
                 "dist/leaflet-vector-markers.js",
                 "dist/leaflet-vector-markers.css"
+            ]
+        },
+        "osmtogeojson": {
+            "main": [
+                "./osmtogeojson.js"
             ]
         }
     }
