Introduce Jest for testing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "transifex-push": "gulp i18next && tx push --source",
         "transifex-pull": "tx pull --all --minimum-perc 1 --force && (git add locales/*.json && git commit locales/*.json -m 'Update translations' || true)",
         "layers": "node layers/josm/extract.js && node layers/collection/extract.js",
-        "test": "gulp",
+        "test": "jest",
         "lint": "eslint .",
         "prettier": "prettier --write '**/*'",
         "serve": "gulp serve watch",
@@ -113,6 +113,7 @@
         "husky": "^4.3.4",
         "i18next-scanner": "^3.0.0",
         "marked": "^2.0.0",
+        "jest": "^26.6.3",
         "merge-stream": "^2.0.0",
         "node-fetch": "^2.6.1",
         "npmfiles": "^0.1.3",
