--- a/.prettierignore
+++ b/.prettierignore
@@ -4,8 +4,14 @@ dist/
 yarn.lock
 .idea
 .gitignore
+.eslintignore
 .prettierignore
 .tx/
 layers/
 locales/*.json
 resources/boundaries/
+*.sh
+profiles2/
+Dockerfile
+tests/**/*.json
+tests/**/*.gpx
