--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ],
     "dependencies": {
         "@bagage/leaflet.restoreview": "1.0.1",
+        "@mapbox/maki": "^6.2.0",
         "@mapbox/polyline": "^0.2.0",
         "@mapbox/togeojson": "^0.16.0",
         "@turf/turf": "^6.2.0",
@@ -282,6 +283,36 @@
         "overpass-layer": {
             "main": [
                 "dist/overpass-layer.js"
+            ]
+        },
+        "@mapbox/maki": {
+            "main": [
+                "icons/art-gallery-11.svg",
+                "icons/bakery-11.svg",
+                "icons/bank-11.svg",
+                "icons/bar-11.svg",
+                "icons/bbq-11.svg",
+                "icons/beer-11.svg",
+                "icons/bicycle-11.svg",
+                "icons/cafe-11.svg",
+                "icons/campsite-11.svg",
+                "icons/car-11.svg",
+                "icons/car-rental-11.svg",
+                "icons/drinking-water-11.svg",
+                "icons/entrance-alt1-11.svg",
+                "icons/fast-food-11.svg",
+                "icons/fuel-11.svg",
+                "icons/grocery-11.svg",
+                "icons/hospital-11.svg",
+                "icons/information-11.svg",
+                "icons/lodging-11.svg",
+                "icons/picnic-site-11.svg",
+                "icons/restaurant-11.svg",
+                "icons/shelter-11.svg",
+                "icons/shop-11.svg",
+                "icons/star-11.svg",
+                "icons/toilet-11.svg",
+                "icons/water-11.svg"
             ]
         }
     }
