change icon for "supermarket" to shopping cart
> One suggestion for distinguishing between a supermarket and a convenience shop, is that a supermarket is large enough to use trolleys. [OSM Wiki](https://wiki.openstreetmap.org/wiki/Tag:shop%3Dsupermarket)

--- a/package.json
+++ b/package.json
@@ -351,6 +351,7 @@
         "@fortawesome/fontawesome-free": {
             "main": [
                 "svgs/solid/shopping-basket.svg",
+                "svgs/solid/shopping-cart.svg",
                 "svgs/solid/ice-cream.svg",
                 "svgs/solid/carrot.svg",
                 "svgs/solid/cheese.svg",
