Remove maki file name postfix "-11" after update

--- a/package.json
+++ b/package.json
@@ -303,32 +303,32 @@
         },
         "@mapbox/maki": {
             "main": [
-                "icons/art-gallery-11.svg",
-                "icons/bakery-11.svg",
-                "icons/bank-11.svg",
-                "icons/bar-11.svg",
-                "icons/bbq-11.svg",
-                "icons/beer-11.svg",
-                "icons/bicycle-11.svg",
-                "icons/cafe-11.svg",
-                "icons/campsite-11.svg",
-                "icons/car-11.svg",
-                "icons/car-rental-11.svg",
-                "icons/drinking-water-11.svg",
-                "icons/entrance-alt1-11.svg",
-                "icons/fast-food-11.svg",
-                "icons/fuel-11.svg",
-                "icons/grocery-11.svg",
-                "icons/hospital-11.svg",
-                "icons/information-11.svg",
-                "icons/lodging-11.svg",
-                "icons/picnic-site-11.svg",
-                "icons/restaurant-11.svg",
-                "icons/shelter-11.svg",
-                "icons/shop-11.svg",
-                "icons/star-11.svg",
-                "icons/toilet-11.svg",
-                "icons/water-11.svg"
+                "icons/art-gallery.svg",
+                "icons/bakery.svg",
+                "icons/bank.svg",
+                "icons/bar.svg",
+                "icons/bbq.svg",
+                "icons/beer.svg",
+                "icons/bicycle.svg",
+                "icons/cafe.svg",
+                "icons/campsite.svg",
+                "icons/car.svg",
+                "icons/car-rental.svg",
+                "icons/drinking-water.svg",
+                "icons/entrance-alt1.svg",
+                "icons/fast-food.svg",
+                "icons/fuel.svg",
+                "icons/grocery.svg",
+                "icons/hospital.svg",
+                "icons/information.svg",
+                "icons/lodging.svg",
+                "icons/picnic-site.svg",
+                "icons/restaurant.svg",
+                "icons/shelter.svg",
+                "icons/shop.svg",
+                "icons/star.svg",
+                "icons/toilet.svg",
+                "icons/water.svg"
             ]
         },
         "@ideditor/temaki": {
