--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,6 @@
         "es2021": true
     },
     "settings": {
-        "polyfills": ["URL", "Promise", "navigator", "Uint8Array", "performance", "location.hostname"]
+        "polyfills": ["URL", "Promise", "navigator", "Uint8Array", "performance", "location.hostname", "document.body"]
     }
 }
