--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "gulp",
         "transifex-push": "gulp i18next && tx push --source",
         "transifex-pull": "tx pull --all --minimum-perc 1 --force && (git add locales/*.json && git commit locales/*.json -m 'Update translations' || true)",
-        "layers": "node layers/josm/extract.js && node layers/collection/extract.js",
+        "layers": "node layers/josm/extract.mjs && node layers/collection/extract.mjs",
         "test": "jest",
         "lint": "eslint .",
         "prettier": "prettier --write '**/*'",
