--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,12 @@
     "extends": ["config:base"],
     "digest": {
         "enabled": false
-    }
+    },
+    "labels": ["dependencies"],
+    "packageRules": [
+        {
+            "matchDepTypes": ["devDependencies"],
+            "extends": ["schedule:weekly"]
+        }
+    ]
 }
