--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "husky": "4.3.8",
         "i18next-scanner": "4.0.0",
         "jest": "28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
         "marked": "4.0.18",
         "merge-stream": "2.0.0",
         "node-fetch": "3.2.9",
