Add bootstrap and bootbox peer dep. popper.js
Fixes failing RoutingOptions.test.js (https://github.com/nrenner/brouter-web/runs/7794276726) for bootbox update to v5.5.3 (#597), that moves popper.js to peer dependencies.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
         "maplibre-gl": "^2.1.9",
         "overpass-layer": "3.1.1",
+        "popper.js": "1.16.1",
         "regenerator-runtime": "0.13.9",
         "togpx": "nrenner/togpx#722d291",
         "tokml": "^0.4.0",
