Prevent renovate bot triggering duplicate builds
(Cancelling concurrent builds is shown as failure)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ concurrency:
 jobs:
     build:
         runs-on: ubuntu-latest
+        if: ${{ !(github.actor == 'renovate' && github.event_name == 'pull_request') }}
 
         steps:
             - uses: actions/checkout@v3
