--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,10 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: '16'
+            - run: |
+                echo "actor: ${{ github.github.actor }}"
+                echo "event_name: ${{ github.event_name }}"
+                echo "result: ${{ !('renovate' == 'renovate' && 'pull_request' == 'pull_request') }}"
             - run: yarn --frozen-lockfile
             - run: yarn test
             - run: yarn lint
