--- a/package.json
+++ b/package.json
@@ -81,10 +81,12 @@
         "maplibre-gl": "2.4.0",
         "overpass-layer": "3.4.0",
         "popper.js": "1.16.1",
+        "qrcodejs": "^1.0.0",
         "regenerator-runtime": "0.13.11",
         "togpx": "nrenner/togpx#722d291",
         "tokml": "0.4.0",
-        "url-search-params": "1.1.0"
+        "url-search-params": "1.1.0",
+        "url-search-params-polyfill": "^8.1.1"
     },
     "devDependencies": {
         "@babel/cli": "7.19.3",
@@ -296,6 +298,16 @@
         "overpass-layer": {
             "main": [
                 "dist/overpass-layer.js"
+            ]
+        },
+        "qrcodejs": {
+            "main": [
+                "qrcode.js"
+            ]
+        },
+        "url-search-params-polyfill": {
+            "main": [
+                "index.js"
             ]
         },
         "@mapbox/maki": {
