--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
         "regenerator-runtime": "0.13.11",
         "togpx": "nrenner/togpx#722d291",
         "tokml": "0.4.0",
-        "url-search-params": "1.1.0"
+        "url-search-params": "1.1.0",
+        "whatwg-fetch": "^3.6.2"
     },
     "devDependencies": {
         "@babel/cli": "7.19.3",
