--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "settings": {
         "polyfills": [
             "URL",
+            "URLSearchParams",
             "Promise",
             "navigator",
             "Uint8Array",
