--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "bootstrap-select": "1.13.18",
         "bootstrap-slider": "11.0.2",
         "codemirror": "5.65.13",
+        "compare-versions": "^6.0.0",
         "core-js-bundle": "3.29.1",
         "datatables": "1.10.18",
         "fit-file-writer": "tbsmark86/fit-file-writer#3eebe13",
@@ -307,6 +308,11 @@
         "url-search-params-polyfill": {
             "main": [
                 "index.js"
+            ]
+        },
+        "compare-versions": {
+            "main": [
+                "lib/umd/index.js"
             ]
         },
         "@mapbox/maki": {
