add overpass query for firepit

--- a/package.json
+++ b/package.json
@@ -367,6 +367,7 @@
                 "icons/museum.svg",
                 "icons/spotting_scope.svg",
                 "icons/cabin.svg",
+                "icons/campfire.svg",
                 "icons/picnic_shelter.svg"
             ]
         },
